# matzpin

./: .gitignore  README.md  arp_handler.py  benchmark_encryptor.py  black_side.py  data.py  encryptor_tests.py  encryptor_utils.py  input.pcap  main.py  matzpin.py  nat.py  natted_output.pcap  pyproject.toml  red_side.py  test.py  test_encryptors.py  test_nat.py  utils.py
config/: pi.local.json  server.local.json
docs/: CYBER_ATTACK_VECTORS.md  SETUP_AND_FORWARD_TEST.md
encryptor_common/: __init__.py  config_validation.py  errors.py  framing.py  protocol.py
encryptor_demi_client/: config.py  main.py
encryptor_pi/: __init__.py  config.py  crypto.py  forwarder.py  main.py  processor.py  rate_limiter.py  replay_db.py  tls_server.py  validator.py
encryptor_server/: __init__.py  client.py  config.py  crypto.py  main.py  tls_client.py
tests/: test_hardening.py
tests/system/: test_localhost_flow.py
tools/: generate_dev_security.py  setup_real_test.ps1
